--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
   
   <div class="nav-social-icons">
     <a href="https://www.facebook.com/share/1aSLw31hR6/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/mohammed62429/?utm_source=qr&r=nametag " target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/@Forumraasafi" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
     <a href="mailto:info@forumraasafi.org" aria-label="Email"><i class="fas fa-envelope"></i></a>
+
   </div>
   </div>
 </header>
@@ -186,43 +188,56 @@
   <div class="cards-grid">
 
     <div class="card">
-      <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
+      <div class="profile-frame">
+        <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
+      </div>
       <h3>الرئيس</h3>
       <p>ذ. محمد زين</p>
     </div>
 
     <div class="card">
-      <img src="img/houda_lkhsali.png" alt="خديجة العباسي" class="profile-img" />
+      <div class="profile-frame">
+        <img src="img/houda_lkhsali.png" alt="خديجة العباسي" class="profile-img" />
+      </div>
       <h3>النائبة</h3>
       <p>خديجة العباسي</p>
     </div>
 
     <div class="card">
+      <div class="profile-frame">
       <img src="img/youssef_abidat.png" alt="يوسف عابدات" class="profile-img" />
+         </div>
       <h3>أمين المال</h3>
       <p>يوسف عابدات</p>
     </div>
 
     <div class="card">
-      <img src="img/نائب_أمين_المال_عبد_الغني_النغايوي-removebg-preview.png" alt="عبد الغني النغايوي" class="profile-img" />
+            <div class="profile-frame">
+<img src="img/نائب_أمين_المال_عبد_الغني_النغايوي-removebg-preview.png" alt="عبد الغني النغايوي" class="profile-img" /></div>
       <h3>نائب أمين المال</h3>
       <p>عبد الغني النغايوي</p>
     </div>
 
     <div class="card">
-      <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
+            <div class="profile-frame">
+
+      <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" /></div>
       <h3>الكاتب العام</h3>
       <p>عزيز عدادي</p>
     </div>
 
     <div class="card">
-      <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" />
+            <div class="profile-frame">
+
+      <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" /></div>
       <h3>نائبة الكاتب العام</h3>
       <p>هدى الخصالي</p>
     </div>
 
     <div class="card">
-      <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" />
+            <div class="profile-frame">
+
+      <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" /></div>
       <h3>مستشارة</h3>
       <p>مليكة ضريبين</p>
     </div>
@@ -236,31 +251,38 @@
   <div class="cards-grid">
 
     <div class="card">
-      <img src="img/الدكتور أحمد قادم.jpg" alt="أحمد قادم" class="profile-img" />
+            <div class="profile-frame">
+
+      <img src="img/الدكتور أحمد قادم.jpg" alt="أحمد قادم" class="profile-img" /></div>
       <h3>الدكتور</h3>
       <p>أحمد قادم</p>
-      <a href="cv/بيان لسيرة الدكتور أحمد قادم.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
+      <a href="cv/بيان لسيرة الدكتور أحمد قادم.pdf" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
     <div class="card">
-      <img src="img/saidelaouadi.png" alt="سعيد العوادي" class="profile-img" />
+            <div class="profile-frame">
+      <img src="img/saidelaouadi.png" alt="سعيد العوادي" class="profile-img" /></div>
       <h3>الدكتور</h3>
       <p>سعيد العوادي</p>
-      <a href="cv/سيرة الأكاديمي فضيلة الدكتور سعيد العوادي.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
+      <a href="cv/سيرة الأكاديمي فضيلة الدكتور سعيد العوادي.pdf" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
     <div class="card">
-      <img src="img/abdrza9...png" alt="عبد المصباحي" class="profile-img" />
+           <div class="profile-frame">
+ <img src="img/abdrza9...png" alt="عبد المصباحي" class="profile-img" /></div>
       <h3>الدكتور</h3>
       <p>عبد الرزاق المصباحي</p>
-      <a href="cv/سيرة مختصرة عن الدكتور عبد الرواق المصباحي.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
+      <a href="cv/سيرة مختصرة عن الدكتور عبد الرواق المصباحي.pdf"  class="cv-button">↗ السيرة العلمية</a>
     </div>
 
     <div class="card">
-      <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />
+            <div class="profile-frame">
+
+      <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />  </div>
+
       <h3>الدكتور</h3>
       <p>محمد المودن</p>
-      <a href="cv/مختصر السيرة العلمية محمد المودن.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
+      <a href="cv/مختصر السيرة العلمية محمد المودن.pdf" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
   </div>
@@ -274,77 +296,104 @@
   <div class="cards-grid-1">
 
     <div class="card-1">
-      <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
+                 <div class="profile-frame">
+ <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" /> </div> 
       <p>ذ. محمد زين</p>
-      <a href="cv/السيرة العلمية محمد زين.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/السيرة العلمية محمد زين.pdf" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
+                  <div class="profile-frame">
+
+      <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" /> </div> 
       <p>ذ. عزيز عدادي</p>
-      <a href="cv/سيرة علمية للأستاذ عزيز عدادي.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/سيرة علمية للأستاذ عزيز عدادي.pdf" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" />
+                  <div class="profile-frame">
+
+      <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" /> </div> 
       <p>ذة. مليكة ضريبين</p>
-      <a href="cv/mlcv.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/mlcv.pdf" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" />
+                  <div class="profile-frame">
+
+      <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" /> </div> 
       <p>ذة. هدى الخصالي</p>
-      <a href="cv/سيرة مختصرة ذة. هدى الخصالي.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/سيرة مختصرة ذة. هدى الخصالي.pdf" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/ذة. زكية المرموق" alt="زكية المرموق" class="profile-img" />
+                  <div class="profile-frame">
+
+      <img src="img/ذة. زكية المرموق" alt="زكية المرموق" class="profile-img" /> </div> 
       <p>ذة. زكية المرموق</p>
-      <a href="cv/سيرة مختصرة للشاعرة زكية المرموق.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/سيرة مختصرة للشاعرة زكية المرموق.pdf"  class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/image-removebg-preview.png" alt="محمد العربي غجو" class="profile-img" />
+                  <div class="profile-frame">
+
+      <img src="img/image-removebg-preview.png" alt="محمد العربي غجو" class="profile-img" /> </div> 
       <p>ذ. محمد العربي غجو</p>
-      <a href="cv/سيرة إبداعية العربي غجو.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/سيرة إبداعية العربي غجو.pdf" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />
+                  <div class="profile-frame">
+      <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" /> </div> 
       <p>د. محمد المودن</p>
-      <a href="cv/مختصر السيرة العلمية محمد المودن.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
+      <a href="cv/مختصر السيرة العلمية محمد المودن.pdf"  class="cv-button">↗ السيرة العلمية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/WhatsApp_Image_2025-07-30_at_16.55.13_ad39c312-removebg-preview.png" alt="عبد المجيد هضمي" class="profile-img" />
+                  <div class="profile-frame">
+
+      <img src="img/WhatsApp_Image_2025-07-30_at_16.55.13_ad39c312-removebg-preview.png" alt="عبد المجيد هضمي" class="profile-img" /> </div> 
       <p>ذ. عبد المجيد هضمي</p>
-      <a href="cv/" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/CV Abdelmajid HADMI.pdf" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/محمد منير.jpg" alt="محمد منير" class="profile-img" />
+                  <div class="profile-frame">
+
+      <img src="img/محمد منير.jpg" alt="محمد منير" class="profile-img" /> </div> 
       <p>ذ. محمد منير</p>
-      <a href="cv/med.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/med.pdf"  class="cv-button">↗ السيرة الإبداعية</a>
     </div>
 
     <div class="card-1">
-      <img src="img/abdlhadirawdi.png" alt="عبد الهادي روضي" class="profile-img" />
+                  <div class="profile-frame">
+      <img src="img/abdlhadirawdi.png" alt="عبد الهادي روضي" class="profile-img" /> </div> 
       <p>د. عبد الهادي روضي</p>
-      <a href="cv/مختصر عن السيرة الإبداعية والنقدية عبد الهادي روضي.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
+      <a href="cv/مختصر عن السيرة الإبداعية والنقدية عبد الهادي روضي.pdf" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
-    <div class="card-1">
-      <img src="img/dr_rachid.png" alt="رشيد الخديري" class="profile-img" />
+    <div class="card-1">            <div class="profile-frame">
+
+      <img src="img/dr_rachid.png" alt="رشيد الخديري" class="profile-img" /> </div> 
       <p>د. رشيد الخديري</p>
-      <a href="cv/السيرة العلمية للدكتور رشيد الخديري.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
+      <a href="cv/السيرة العلمية للدكتور رشيد الخديري.pdf" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
-    <div class="card-1">
-      <img src="img/الباحث_أسامة_لحفيظ.png" alt="أسامة حفيظ" class="profile-img" />
+    <div class="card-1">           
+       <div class="profile-frame">
+
+      <img src="img/الباحث_أسامة_لحفيظ.png" alt="أسامة حفيظ" class="profile-img" /> </div> 
       <p>ذ. أسامة حفيظ</p>
-      <a href="cv/السيرة العلمية للباحث أسامة لحفيظ.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
+      <a href="cv/السيرة العلمية للباحث أسامة لحفيظ.pdf"  class="cv-button">↗ السيرة الإبداعية</a>
     </div>
     </div> <!-- END of .cards-grid-1 -->
+<section id="cv-viewer-section" class="container" style="margin-top: 40px; display:none;">
+<h2>عرض السيرة العلمية / الإبداعية</h2>
+  <div id="cv-viewer" style="width: 100%; height: 600px; border: 1px solid #ccc;">
+    <iframe id="cv-frame" src="" width="100%" height="100%" style="border:none;"></iframe>
+  </div>
+</section>
+
 
 <!-- New Section for Festival Presentation -->
 
@@ -389,7 +438,8 @@
       <h4>تابعنا</h4>
        <div class="nav-social-icons">
     <a href="https://www.facebook.com/share/1aSLw31hR6/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/mohammed62429/?utm_source=qr&r=nametag " target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/@Forumraasafi" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
     <a href="mailto:info@forumraasafi.org" aria-label="Email"><i class="fas fa-envelope"></i></a>
   </div>
     </div>
@@ -398,7 +448,7 @@
       <h4>اتصل بنا</h4>
       <p>آسفي، المغرب</p>
      <p dir="ltr">+212 6 17 82 68 82</p>
-     <p dir="ltr">raaforum@gmail.com</p>
+     <p dir="ltr">info@forumraasafi.org</p>
 
     </div>
 
@@ -409,6 +459,25 @@
   </div>
 </footer>
 
+<script>
+  // Select all CV buttons
+  const cvButtons = document.querySelectorAll('.cv-button');
+  const viewerSection = document.getElementById('cv-viewer-section');
+  const iframe = document.getElementById('cv-frame');
+
+  cvButtons.forEach(button => {
+    button.addEventListener('click', function(e) {
+      e.preventDefault(); // Prevent link from opening normally
+      const pdfUrl = this.getAttribute('href'); // Get PDF URL
+
+      iframe.src = pdfUrl; // Set iframe src to PDF URL
+      viewerSection.style.display = 'block'; // Show the viewer section
+
+      // Scroll smoothly to the viewer section
+      viewerSection.scrollIntoView({ behavior: 'smooth' });
+    });
+  });
+</script>
 
 <script>
   let slideIndex = 0;
