--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
   <p class="festival-description">
     للمزيد من المعلومات حول مهرجان آسفي الدولي ربيع الشعر، يمكنكم تحميل العرض التعريفي الذي يتضمن نبذة عن رؤيته، أهدافه، محطاته السابقة، وضيوفه المكرمين.
   </p>
-  <a href="cv/تقرير مفصل عن فعاليات الدورة الثالثة لمهرجان اسفي الدولي ربيع الشعر (3).pdf" class="cv-button presentation-button" id="presentation-button">
+  <a href="cv/تقرير مفصل عن فعاليات الدورة الثالثة لمهرجان اسفي الدولي ربيع الشعر (3).pdf" target="_blank" class=" presentation-button" id="presentation-button">
     ↗ تحميل العرض التعريفي
   </a>
   
